solid meshes work for now yessssss

--- a/code_template/Makefile
+++ b/code_template/Makefile
@@ -1,7 +1,10 @@
 all: rasterizer
 
 rasterizer:
-	g++ *.cpp -g -std=c++11 -o rasterizer
+	g++ *.cpp -g -std=c++11 -Wall -o rasterizer
+
+debug: rasterizer
+	lldb ./rasterizer -- ../input_outputs/culling_enabled_inputs/horse_and_mug.xml
 
 clean:
 	rm -f rasterizer
